# app

./: .gitignore  README.md  flake.nix  main.js  package-lock.json  package.json  shell.nix
.github/workflows/: build-and-release.yml  update-npm-deps-hash.yml
docs/: tauri-ios.md
nix/: appimage-shell.nix  module.nix  qxchat.nix
scripts/: build-android-ci.sh  build-android.sh  build-tauri-ci.sh  build-windows.sh  bump-version.py  ios-build.sh  tauri-build.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tools/: build-windows.sh
