[package]
name = "qxchat"
version = "1.8.0"
description = "QxChat Client"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qxchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = ["custom-protocol", "tray-icon", "devtools"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-single-instance = "=2.3.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls"] }
semver = "=1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "2.0.2"
